/**
 * Copyright 2018-2020 Streamlit Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/

syntax = "proto3";

import "streamlit/proto/SessionState.proto";

// This is the first message that is sent when a new report is run.
message NewReport {
  // Initialization data. This data does *not* change from rerun to rerun,
  // but we send it every time so that we don't have to track whether the
  // client has already received it. The client is responsible for
  // performing initialization logic only once.
  Initialize initialize = 1;

  // The report ID
  string report_id = 2;

  // The basename of the script that launched this report. Example: "foo.py"
  string name = 3;

  // The full path of the script that launched this report. Example:
  // "/foo/bar/foo.py"
  string script_path = 4;

  DeployParams deploy_params = 5;
}

// Contains Streamlit configuration data, and the session state that existed
// at the time the user connected.
message Initialize {
  UserInfo user_info = 1;
  Config config = 2;
  EnvironmentInfo environment_info = 3;

  // The session state at the time the connection was established
  SessionState session_state = 4;

  // the actual command line as a string
  string command_line = 5;

  // The ReportSession.id for this connection's ReportSession.
  // This is used to associate uploaded files with the client that uploaded
  // them.
  string session_id = 6;
}

// App configuration options, initialized mainly from the
// .streamlit/config.toml file. Does not change over the app's lifetime.
message Config {
  // True if saving is properly configured.
  bool sharing_enabled = 1;

  // See config option "browser.gatherUsageStats".
  bool gather_usage_stats = 2;

  // See config option "global.maxCachedMessageAge".
  int32 max_cached_message_age = 3;

  // See config option "mapbox.token".
  string mapbox_token = 4;

  // See config option "server.allowRunOnSave"
  bool allow_run_on_save = 5;
}

// Data that identifies the Streamlit app creator.
// Does not change over the app's lifetime.
message UserInfo {
  string installation_id = 1;
  string installation_id_v1 = 3;
  string installation_id_v2 = 4;
  string email = 2;
}

// Data that identifies the Streamlit app's environment.
// Does not change over the app lifetime.
//
// NB: unlike most of our protobuf data, the EnvironmentInfo message (and all
// its ancestors' IDs) *must* maintain backward- and forward-compatibility.
// When a Streamlit instance is updated to a new version, all connected clients
// will be outdated. Those clients need to be able to read the
// `streamlit_version` property so they can auto-update to the new version.
message EnvironmentInfo {
  string streamlit_version = 1;
  string python_version = 2;
}

// Data about the git repository this app is deployed from (if any).
// Does not change over the app's lifetime.
message DeployParams {
  string repository = 1;
  string branch = 2;
  string module = 3;
}
